--- a/index.html
+++ b/index.html
@@ -5,115 +5,181 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JK E-Sevai Centre</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/assets/logo-esevai.png" type="image/x-icon">
   </head>
   <body>
     <!-- HEADER / NAV -->
     <header class="site-header">
-      <div class="header-inner">
-        <div class="logo">JK E-Sevai Centre</div>
+        <div class="header-inner">
 
-        <nav class="nav">
-          <a href="#home">Home</a>
-          <a href="#services">Services</a>
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
+            <!-- BRAND -->
+            <!-- <div class="header-brand">
+                <span><img src="/assets/logo-esevai.png" alt="E-Sevai" class="header-logo"></span>
+                <span class="brand-name">JK E-Sevai Centre</span>
+                <span class="brand-tagline">Computer & Online Services</span>
+            </div> -->
+
+            <div class="header-brand">
+                <img src="assets/logo-esevai.png" alt="JK E-Sevai Centre" class="header-logo">
+
+                <div class="brand-text">
+                    <div class="brand-name">JK E-Sevai Centre</div>
+                    <div class="brand-tagline">Computer & Online Services</div>
+                </div>
+            </div>
+
+
+            <!-- NAV -->
+            <nav class="header-nav">
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            </nav>
+
+        </div>
     </header>
 
     <!-- HERO / HOME -->
     <section id="home" class="hero">
-        <div class="hero-inner">
+        <div class="hero-grid">
 
-            <!-- TRUST LOGOS -->
-            <div class="hero-trust">
-            <img src="assets/india-gov.jpg" alt="Government of India" />
-            <img src="assets/tn-gov.jpg" alt="Government of Tamil Nadu" />
-            <img src="assets/logo-esevai.png" alt="E-Sevai Services" />
+            <!-- LEFT : E-SEVAI -->
+            <div class="hero-side hero-left">
+            <img src="assets/logo-esevai.png" alt="E-Sevai Services">
             </div>
 
-            <!-- HERO CONTENT -->
+            <!-- CENTER : CONTENT -->
+            <div class="hero-center">
             <span class="badge">E-Sevai & Computer Services</span>
+
             <h1>Fast & Reliable Online Services</h1>
+
             <p>
-            Government applications, certificates, PF claims,
-            and complete computer services under one roof.
+                Government applications, certificates, PF claims,
+                and complete computer services under one roof.
             </p>
 
             <div class="hero-actions">
-            <a href="tel:9443948817" class="btn primary">Call Now</a>
-            <button class="btn ghost" id="openFormBtn">Enquire Now</button>
+                <a href="tel:9443948817" class="btn primary">Call Now</a>
+                <button class="btn ghost" id="openFormBtn">Enquire Now</button>
+            </div>
+            </div>
+
+            <!-- RIGHT : GOVT LOGOS -->
+            <div class="hero-side hero-right">
+            <img src="/assets/india-gov.png" alt="Government of India">
+            <img src="/assets/tn-gov.webp" alt="Government of Tamil Nadu">
             </div>
 
         </div>
     </section>
 
     <!-- SERVICES -->
-    <section id="services">
-        <h2>Our Services</h2>
+    <section id="services" class="services-categories">
+        <div class="services-inner">
 
-        <div class="services-grid">
-            <div class="service-card">
-                <strong>Xerox • Print • Scan • Copy</strong>
-                <span>ஜெராக்ஸ் • பிரிண்ட் • ஸ்கேன் • நகல்</span>
+            <h2>Our Services</h2>
+            <p class="services-subtitle">
+            A wide range of government, financial, travel, and computer-related services
+            provided under one roof.
+            </p>
+
+            <!-- CATEGORY 1 -->
+            <div class="service-category">
+            <h3>
+                <span class="cat-icon">📜</span>
+                Government & Certificate Services
+            </h3>
+
+            <ul>
+                <li>
+                <span>Income Certificate</span>
+                <small>வருமான சான்றிதழ்</small>
+                </li>
+                <li>
+                <span>Community Certificate</span>
+                <small>சமூக சான்றிதழ்</small>
+                </li>
+                <li>
+                <span>Nativity Certificate</span>
+                <small>வசிப்பிட (நேட்டிவிட்டி) சான்றிதழ்</small>
+                </li>
+                <li>
+                <span>Heir / Birth / Death Certificate</span>
+                <small>வாரிசு / பிறப்பு / இறப்பு சான்றிதழ்</small>
+                </li>
+                <li>
+                <span>Payment of Municipal Taxes</span>
+                <small>நகராட்சி வரி செலுத்துதல்</small>
+                </li>
+            </ul>
             </div>
 
-            <div class="service-card">
-                <strong>Employment Registration</strong>
-                <span>வேலை வாய்ப்பு பதிவு</span>
+            <!-- CATEGORY 2 -->
+            <div class="service-category">
+                <h3>
+                    <span class="cat-icon">🆔</span>
+                    Employment & Identity Services
+                </h3>
+
+            <ul>
+                <li>
+                <span>Employment Registration</span>
+                <small>வேலை வாய்ப்பு பதிவு</small>
+                </li>
+                <li>
+                <span>PF Claim & Withdrawal</span>
+                <small>பி.எப் கோரிக்கை & பணம் பெறுதல்</small>
+                </li>
+                <li>
+                <span>Passport Services</span>
+                <small>பாஸ்போர்ட் சேவைகள்</small>
+                </li>
+            </ul>
             </div>
 
-            <div class="service-card">
-                <strong>PF Claim & Withdrawal</strong>
-                <span>பி.எப் கோரிக்கை & பணம் பெறுதல்</span>
+            <!-- CATEGORY 3 -->
+            <div class="service-category">
+                <h3>
+                    <span class="cat-icon">💳</span>
+                    Travel & Financial Services
+                </h3>
+
+            <ul>
+                <li>
+                <span>Bus / Train / Plane Ticket Booking</span>
+                <small>பேருந்து / ரயில் / விமான டிக்கெட்</small>
+                </li>
+                <li>
+                <span>Money Transfer</span>
+                <small>பண பரிமாற்றம்</small>
+                </li>
+            </ul>
             </div>
 
-            <div class="service-card">
-                <strong>Bus/ train/ plane ticket</strong>
-                <span>பேருந்து/ரயில்/விமான டிக்கெட்</span>
-            </div>
+            <!-- CATEGORY 4 -->
+            <div class="service-category">
+                <h3>
+                    <span class="cat-icon">🖨️</span>
+                    Printing & Computer Services
+                </h3>
 
-            <div class="service-card">
-                <strong>Passport Services</strong>
-                <span>பாஸ்போர்ட் சேவைகள்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Money Transfer</strong>
-                <span>பண பரிமாற்றம்</span>
-            </div>
-            
-            <div class="service-card">
-                <strong>Payment of municipal taxes</strong>
-                <span>நகராட்சி வரி செலுத்துதல்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Heir/ Birth/ Death Certificate</strong>
-                <span>வாரிசு/ பிறப்பு/ இறப்பு சான்றிதழ்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Income Certificate</strong>
-                <span>வருமான சான்றிதழ்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Community Certificate</strong>
-                <span>சமூக சான்றிதழ்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Nativity Certificate</strong>
-                <span>வசிப்பிட (நேட்டிவிட்டி) சான்றிதழ்</span>
-            </div>
-
-            <div class="service-card">
-                <strong>Job Typing</strong>
+            <ul>
+                <li>
+                <span>Xerox / Print / Scan / Copy</span>
+                <small>ஜெராக்ஸ் / பிரிண்ட் / ஸ்கேன் / நகல்</small>
+                </li>
+                <li>
                 <span>Job Typing</span>
+                <small>வேலை தட்டச்சு</small>
+                </li>
+            </ul>
             </div>
+
         </div>
     </section>
+
 
     <!-- ABOUT -->
     <section id="about" class="about-section">
@@ -155,29 +221,58 @@
     <section id="contact" class="contact-section">
         <div class="contact-inner">
 
-            <h2>Contact Us</h2>
-            <p class="contact-subtext">
-            Reach out to us for enquiries, service details, or assistance.
-            We are here to help.
-            </p>
-
-            <div class="contact-cards">
-            <div class="contact-card">
-                <label>Phone</label>
-                <p>94439 48817</p>
+            <div class="contact-header">
+                <h2>Contact Us</h2>
+                <p class="contact-subtext">
+                    Reach out to us for enquiries, service details, or assistance.
+                    We are here to help.
+                </p>
             </div>
 
-            <div class="contact-card">
-                <label>Email</label>
-                <p>jkcomputercentre@gmail.com</p>
-            </div>
+            <div class="contact-layout">
+
+            <!-- LEFT : INFO -->
+            <div class="contact-info">
+                <div class="contact-card">
+                    <label>Phone</label>
+                    <p>94439 48817</p>
+                </div>
+
+                <div class="contact-card">
+                    <label>Email</label>
+                    <p>
+                        <!-- Enable the below only if you want gmail by default.
+                         But disable the other one -->
+                        
+                         <!-- <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jkcomputercentre@gmail.com"
+                        target="_blank"
+                        rel="noopener"
+                        class="contact-link"> jkcomputercentre@gmail.com </a> -->
+
+                        <a href="mailto:jkcomputercentre@gmail.com" class="contact-link">
+                            jkcomputercentre@gmail.com
+                        </a>
+                    </p>
+                </div>
+
             </div>
 
-            <div class="contact-actions">
-            <a href="tel:9443948817" class="btn primary">Call Now</a>
-            <button class="btn outline" id="openFormBtnContact">
-                Enquire Now
-            </button>
+            <!-- RIGHT : ACTIONS -->
+            <div class="contact-cta">
+                <h3>Need Assistance?</h3>
+                <p>
+                Call us directly for quick support or send an enquiry
+                and we will get back to you.
+                </p>
+
+                <div class="contact-actions">
+                    <a href="tel:9443948817" class="btn primary">Call Now</a>
+                    <button class="btn outline ghost" id="openFormBtnContact">
+                        Enquire Now
+                    </button>
+                </div>
+            </div>
+
             </div>
 
         </div>
@@ -197,7 +292,29 @@
       </div>
     </div>
 
-    <footer class="footer">© 2026 JK E-Sevai Centre</footer>
+    <!-- FOOTER -->
+    <footer class="site-footer">
+        <div class="footer-inner">
+
+            <div class="footer-brand">
+                <h3>JK E-Sevai Centre</h3>
+                <p>
+                    Government services, documentation, and computer support
+                    provided with accuracy and care.
+                </p>
+            </div>
+
+            <div class="footer-meta">
+                <p>
+                    © 2026 JK E-Sevai Centre. All rights reserved.
+                </p>
+                <p class="footer-note">
+                    This is a service assistance centre. We are not a government office.
+                </p>
+            </div>
+
+        </div>
+    </footer>
 
     <script src="/js/script.js"></script>
   </body>
