--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JK E-Sevai Centre</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="shortcut icon" href="/assets/logo-esevai.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="shortcut icon" href="./assets/logo-esevai.png" type="image/x-icon">
   </head>
   <body>
     <!-- HEADER / NAV -->
@@ -21,7 +21,7 @@
             </div> -->
 
             <div class="header-brand">
-                <img src="assets/logo-esevai.png" alt="JK E-Sevai Centre" class="header-logo">
+                <img src="./assets/logo-esevai.png" alt="JK E-Sevai Centre" class="header-logo">
 
                 <div class="brand-text">
                     <div class="brand-name">JK E-Sevai Centre</div>
@@ -323,6 +323,6 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
